Implement tests
Other changes: configure logging in application.yml. Modify data model.
Fix swagger
